# kratom

./: README.md
kratom/: Cargo.toml  README.md
kratom/src/: lib.rs  tools.rs
kratom/src/multipliers/: hadamard.rs  mod.rs  regular.rs
kratom/src/neuralnets/: mod.rs  standard.rs
