[package]
name = "kratom"
version = "0.1.0"
edition = "2021"
authors = ["Opossalite"]
description = "Simple neural network library."
homepage = "https://github.com/opossalite/kratom"
repository = "https://github.com/opossalite/kratom/tree/master/kratom"
categories = ["algorithms", "science"]
#keywords = ["NEAT", "machine", "learning", "neural", "CUDA"]
keywords = ["machine", "learning", "neural"]
license = "GPL-2.0 OR GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
